<resources>
    <string name="app_name">UAS AKB</string>
    <string name="nama">Mochamad Hijul Mukhlisin</string>
    <string name="nim">10116296</string>
    <string name="kelas">IF-7 / AKB-7</string>
    <string name="kutipan">Made in Indonesia, melihat dunia pertama kali pada tanggal 31 Maret 1998,Suka mempelajari hal baru, dalam jalan ke arah yang lebih baik.</string>
    <string name="contactfragment">Contact</string>
    <string name="notlp">089525692775</string>
    <string name="email">hijul1998@gmail.com</string>
    <string name="instagram">"@hijulmochamad"</string>
    <string name="twitter">"@hijulmochamad"</string>
    <string name="github">github.com/mochijul</string>

</resources>
















    <!--Created by Mochamad Hijul M - 10116296-->
