<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/boxrounded_noround">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="219dp"
            android:layout_gravity="center_horizontal"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:src="@drawable/profileimg" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/boxrounded_white"
            android:gravity="center_horizontal"
            android:padding="20dp"
            android:text="@string/nama"
            android:textColor="@color/colorWhite"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/boxrounded_white"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/nim"
            android:textColor="@color/colorWhite"
            android:textSize="25sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/boxrounded_white"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/kelas"
            android:textColor="@color/colorWhite"
            android:textSize="25sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/boxrounded_white"
            android:gravity="left"
            android:padding="10dp"
            android:text="@string/kutipan"
            android:textColor="@color/colorWhite"
            android:textSize="22sp" />

    </LinearLayout>

</ScrollView>