<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_gravity="center_horizontal"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:src="@drawable/ic_local_phone_black_24dp"
            android:background="#078971"/>
        <TextView
            android:background="#078971"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contactfragment"
            android:gravity="center_horizontal"
            android:textSize="23sp"
            android:paddingBottom="20dp"
            android:textColor="@color/colorWhite"/>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/boxrounded">

            <ImageView
                android:layout_width="13dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="2"
                android:background="@drawable/phoneimg"
                android:gravity="center_horizontal"
                android:paddingBottom="20dp"
                android:textColor="@color/colorWhite" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:gravity="center_horizontal"
                android:padding="20dp"
                android:text="@string/notlp"
                android:textColor="@color/colorWhite"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnTlp"
                android:layout_width="12dp"
                android:layout_height="35dp"
                android:layout_weight="2"
                android:background="@drawable/ic_link_white_24dp"
                android:layout_margin="10px"/>


        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/boxrounded">

            <ImageView
                android:layout_width="26dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="2"
                android:background="@drawable/gmailimg"
                android:gravity="center_horizontal"
                android:paddingBottom="20dp"
                android:textColor="@color/colorWhite" />

            <TextView
                android:layout_width="182dp"
                android:layout_height="65dp"
                android:layout_weight="6"
                android:background="@drawable/boxrounded"
                android:gravity="center_horizontal"
                android:padding="20dp"
                android:text="@string/email"
                android:textColor="@color/colorWhite"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnEmail"
                android:layout_width="12dp"
                android:layout_height="35dp"
                android:layout_weight="2"
                android:background="@drawable/ic_link_white_24dp"
                android:layout_margin="10px" />


        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/boxrounded">

            <ImageView
                android:layout_width="13dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="2"
                android:background="@drawable/igimg"
                android:gravity="center_horizontal"
                android:paddingBottom="20dp"
                android:textColor="@color/colorWhite" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:background="@drawable/boxrounded"
                android:gravity="center_horizontal"
                android:padding="20dp"
                android:text="@string/instagram"
                android:textColor="@color/colorWhite"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnIstagram"
                android:layout_width="12dp"
                android:layout_height="35dp"
                android:layout_weight="2"
                android:background="@drawable/ic_link_white_24dp"
                android:layout_margin="10px" />


        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/boxrounded">

            <ImageView
                android:layout_width="13dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="2"
                android:background="@drawable/twitterimg"
                android:gravity="center_horizontal"
                android:paddingBottom="20dp"
                android:textColor="@color/colorWhite" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:background="@drawable/boxrounded"
                android:gravity="center_horizontal"
                android:padding="20dp"
                android:text="@string/twitter"
                android:textColor="@color/colorWhite"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_twitter"
                android:layout_width="12dp"
                android:layout_height="35dp"
                android:layout_weight="2"
                android:background="@drawable/ic_link_white_24dp"
                android:layout_margin="10px" />


        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/boxrounded">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="29dp"
                android:layout_margin="10dp"
                android:layout_weight="2"
                android:background="@drawable/gitimg"
                android:gravity="center_horizontal"
                android:paddingBottom="20dp"
                android:textColor="@color/colorWhite" />

            <TextView
                android:background="@drawable/boxrounded"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/github"
                android:gravity="center_horizontal"
                android:textSize="20sp"
                android:padding="20dp"
                android:layout_weight=".80"
                android:textColor="@color/colorWhite"/>

            <Button
                android:id="@+id/btn_github"
                android:layout_width="22dp"
                android:layout_height="35dp"
                android:layout_margin="10px"
                android:layout_weight="2"
                android:background="@drawable/ic_link_white_24dp" />


        </LinearLayout>

    </LinearLayout>

</ScrollView>